<resources>
    <string name="app_name">KITCHEN KIT</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Title</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="recipe_detail_default_message">Ingredients &amp; Procedures</string>
    <string name="default_name">Name</string>
    <plurals name="title_user_info">
        <item quantity="one">Cooked for %d year\n\nFavorite Categories</item>
        <item quantity="other">Cooked for %d years\n\nFavorite Categories</item>
    </plurals>
    <string name="default_user_info_title">>Cooked for %d year\n\nFavorite Categories</string>
    <string name="button_sign_in">SIGN IN</string>
    <string name="message_sign_up">SIGN UP</string>
    <string name="background">Background</string>
    <string name="button_logout">LOGOUT</string>
    <string name="my_ingredients_title">My Ingredients</string>
    <string name="message_is_frozen">Is Frozen</string>
    <string name="message_amount">Amount</string>
    <string name="text_banana">Banana</string>
    <string name="title_new_ingredient">New Ingredient</string>
    <string name="hint_ingredient_name">Ingredient Name</string>
    <string name="ingredient_image">Ingredient Image</string>
    <string name="title_amount_text_view">Amount</string>
    <string name="unit_kg">kg</string>
    <string name="dinner">Dinner</string>
    <string name="asian">Asian</string>
    <string name="mexican">Mexican</string>
    <string name="vegan">Vegan</string>
    <string name="snack">Snack</string>
    <string name="all">All</string>
    <string name="order_by">Order by: </string>
    <string name="alphabetical_down">Alphabetical↓</string>
    <string name="amount_down">Amount↓</string>
    <string name="best_before_date_down">Best-before date↓</string>
    <string name="bought_date_down">Bought date↓</string>
    <string name="alphabetical_up">Alphabetical↑</string>
    <string name="amount_up">Amount↑</string>
    <string name="best_before_date_up">Best-before date↑</string>
    <string name="bought_date_up">Bought date↑</string>
    <string name="my_ingredients">My Ingredients</string>
    <string name="button_rose_sign_in">ROSE SIGN IN</string>
    <string name="title_profile">Profile</string>
    <string name="title_edit_name">Name:</string>
    <string name="new_name_hint">New Name</string>
    <string name="title_cooked_year">Cooked Year:</string>
    <string name="hint_cooked_year">Cooked Year</string>
    <string name="back_description">go back</string>
    <string name="button_save">SAVE</string>
    <string name="amount_display">%.2f </string>
    <plurals name="day_display">
        <item quantity="zero">@string/zero_day_display</item>
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <string name="zero_day_display">Today</string>
    <string name="your_avatar">Your Avatar:</string>
    <string name="logout_alert">Are you sure you want to logout?</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="default_expire_date">Default Expire Date</string>
    <string name="name">name</string>
    <string name="number">number</string>
    <string name="unit">unit</string>
    <string name="can_froze">Can Froze</string>
    <string name="frozen_expire_date">Frozen Expire Date</string>
    <string name="ingredient_image_url">Ingredient Image URL</string>
    <string name="url">url</string>
    <string name="description_go_back">go back</string>
    <string name="message_upload_avatar">Upload Avatar</string>
    <string name="search">Search</string>
    <string name="clear_search_filter">Show All</string>
    <string name="search_by_name">Search By Name</string>
    <string name="choose">Choose</string>
    <string name="default_fruit_name">Banana</string>
    <string name="title_bought_date">Bought</string>
    <string name="template_bought_date">x days ago</string>
    <string name="title_best_before">Best Before</string>
    <string name="template_date_format">mm/dd/yyyy</string>
    <string name="title_amount_card_view">Amount</string>
    <string name="template_weight">x kg</string>
    <string name="warning">warning</string>
    <string name="default_num_favorite">1.</string>
    <string name="default_favorite">Favorite</string>
    <string name="action_delete">DELETE</string>
    <string name="message_author"><![CDATA[Created by Allen Liu & Ray Fang]]></string>
    <string name="recipe">Recipe</string>
    <string name="title">Title</string>
    <string name="x">x</string>
    <string name="ea">ea</string>
</resources>