<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingBottom="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/name"
        android:hint="@string/name"
        android:inputType="text"
        android:text=""
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_expire_date"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/expire_edit_text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/number"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="24sp"
            tools:ignore="InefficientWeight" />

        <EditText
            android:id="@+id/expire_edit_text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/unit"
            android:hint="@string/unit"
            android:inputType="text"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frozen_expire_date"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/expire_frozen_edit_text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/number"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="24sp"
            tools:ignore="InefficientWeight" />

        <EditText
            android:id="@+id/expire_frozen_edit_text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unit"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_image_url"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/url_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:text=""
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/can_froze_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/can_froze" />

</LinearLayout>