<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/edit_profile_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <ImageButton
            android:id="@+id/button_edit_profile_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@android:color/white"
            android:contentDescription="@string/back_description"
            android:src="@drawable/ic_back"
            android:tint="@android:color/black" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/edit_profile_app_bar"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/edit_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/title_edit_name"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/default_name"
            android:hint="@string/new_name_hint"
            android:inputType="text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/title_cooked_year_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:text="@string/title_cooked_year"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cooked_year_edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/hint_cooked_year"
            android:hint="@string/hint_cooked_year"
            android:inputType="number"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_save"
            android:textSize="36sp" />

    </LinearLayout>
</RelativeLayout>