<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recipe.RecipeBrowserFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/button_profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@android:color/white"
                android:tint="@android:color/black"
                app:srcCompat="@drawable/ic_profile" />

            <ImageButton
                android:id="@+id/button_recommend"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/white"
                android:tint="@android:color/black"
                app:layout_anchorGravity="top|center"
                app:srcCompat="@drawable/ic_recommend_recipes" />

            <ImageButton
                android:id="@+id/button_search"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@android:color/white"
                android:tint="@android:color/black"
                app:srcCompat="@android:drawable/ic_menu_search" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinner" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asian" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mexican" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegan" />

        </com.google.android.material.tabs.TabLayout>
    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_my_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_my_ingredients" />

    <include
        layout="@layout/recipe_card_recycler"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="center"
        android:layout_marginTop="110dp"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>