<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recipe.RecipeDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/go_back"
                android:tint="#000"
                app:layout_anchor="@+id/appBarLayout"
                app:layout_anchorGravity="start|center"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/recipe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="3dp"
                android:text="@string/recipe"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/button_null"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@android:color/white"
                android:contentDescription="@string/title"
                android:tint="@android:color/white" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/recipe_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingStart="12dp"
        android:text="@string/title"
        android:textSize="40sp"
        tools:ignore="RtlSymmetry" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="115dp"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/recipe_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/recipe_detail_default_message"
            android:textSize="20sp" />

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>